src/main/java/com/example/webshop/models/errors/ValidationErrorResponseModel.java
package com.example.webshop.models.errors;

public abstract class ValidationErrorResponseModel {
}
